--- a/proj2_client/res/values/strings.xml
+++ b/proj2_client/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="text_defaultip" translatable="false">127.0.0.1</string>
     <string name="text_defaultuser">Anonymous</string>
     <string name="title_activity_main">Air Hockey</string>
+    <string name="action_disconnect">Disconnect</string>
 </resources>
