--- a/proj2_client/res/values-pt/strings.xml
+++ b/proj2_client/res/values-pt/strings.xml
@@ -2,17 +2,13 @@
 <resources>
     <string name="action_settings">Definições</string>
     <string name="ingame_score">Pontuação</string>
-    <string name="ingame_serve">Serviço</string>
-    <string name="msg_win">Ganhaste!</string>
-    <string name="msg_lose">Perdeste :(</string>
     <string name="menu_connect">Ligar ao servidor</string>
     <string name="menu_hostip">Endereço IP</string>
     <string name="menu_port">Porta</string>
     <string name="menu_username">Nome</string>
     <string name="menu_color">Cor</string>
     <string name="menu_preferences">Opções</string>
-    <string name="hello_world">Olá MUNDO!</string>
     <string name="button_connect">Ligar</string>
     <string name="button_exit">Sair</string>
-    <string name="text_anonymous"></string>
+    <string name="action_disconnect">Desligar</string>
 </resources>
