--- a/proj2_client/res/values/strings.xml
+++ b/proj2_client/res/values/strings.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name" translatable="false">Air Hockey</string>
+    <string name="text_defaultport" translatable="false">8080</string>
+    <string name="text_defaultip" translatable="false">127.0.0.1</string>
+    <string name="text_defaultuser" translatable="false">Anonymous</string>
+    <string name="title_activity_main" translatable="false">Air Hockey</string>
     <string name="action_settings">Settings</string>
     <string name="ingame_score">Score</string>
-    <string name="ingame_serve">Serve</string>
-    <string name="msg_win">You won!</string>
-    <string name="msg_lose">Game over :(</string>
     <string name="menu_connect">Connect to server</string>
     <string name="menu_hostip">Host IP</string>
     <string name="menu_port">Port</string>
     <string name="menu_username">Username</string>
     <string name="menu_color">Color</string>
-    <string name="title_activity_connect_menu" translatable="false">Table Tennis</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_preferences">Preferences</string>
     <string name="button_connect">Connect</string>
     <string name="button_exit">Exit</string>
-    <string name="text_defaultport" translatable="false">8080</string>
-    <string name="text_defaultip" translatable="false">127.0.0.1</string>
-    <string name="text_defaultuser">Anonymous</string>
-    <string name="title_activity_main">Air Hockey</string>
     <string name="action_disconnect">Disconnect</string>
 </resources>
